--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ $(document).ready(function(){
                       <div class="submenu_tit"> <a target="_blank" href="#">裙装</a> </div>
                       <div class="submenu_quickmenu">
                         <p><a target="_blank" href="#">半身裙</a></p>
-                        <p><a target="_blank" href="#">连衣裙</a></p>
+                        <p><a target="_blank" href="html/page.html">连衣裙</a></p>
                         <p><a target="_blank" href="#">套装</a></p>
                       </div>
                     </div>
